<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.fragmentos.Losa4Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/car4TitLosa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/car4TitLosa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:src="@drawable/cancha_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/car4Horario"/>

        </LinearLayout>
        <RadioGroup
            android:id="@+id/car4RgrReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/car4Rbt3a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/car4Rbt3a4"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:checked="true"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/car4Rbt5a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/car4Rbt5a6" />

            <RadioButton
                android:id="@+id/car4Rbt7a8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/car4Rbt7a8"/>
        </RadioGroup>


        <EditText
            android:id="@+id/car4TxtFechaRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/car4FechaRes"
            android:inputType="none"
            android:maxLength="45"
            android:minHeight="25dp"
            android:textColorHint="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/car4BtnAceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/btnRegOrange"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                android:hint="@string/car4BtnAceptar"/>

            <Button
                android:id="@+id/car4BtnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/btnRegOrange"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:hint="@string/car4BtnRegresar"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>