<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotarjeta"
    tools:context=".actividades.actividades.Tarjeta_Activity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/TarTitTarjeta"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tarjetavisa" />

        </LinearLayout>

        <EditText
            android:id="@+id/editNumTar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="Número de tarjeta" />

        <EditText
            android:id="@+id/editNomTar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="Titular de la tarjeta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Fecha de vencimiento (MM/AA)"
                android:textColorHint="@color/white" />
            <EditText
                android:id="@+id/editCCV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="CCV"

                android:textColorHint="@color/white" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/regBtnContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRegOrange"
                android:hint="@string/TarConfirmar"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/regBtnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRegOrange"
                android:hint="@string/TarRegresar"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>